--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,13 @@ header {
     float: left;
     width: 50%;
     height: 500px;
-    background: white;
     padding: 20px;
     border-color: black;
     border-style: solid;
     border-width: 5px;
     text-align: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 #pika, #eev, #bulb, #char {
@@ -43,15 +44,20 @@ header {
     padding: 20px;
     width: 50%;
     height: 500px;
-    background-color: white;
     border-color: black;
     border-style: solid;
     border-width: 5px;
 }
 
-h1 {
+.top {
     background-color: black;
     color: white;
+    font-size: 25px;
+}
+
+.bottom {
+    color: black;
+    font-size: 25px;
 }
 
 section:after {
@@ -61,7 +67,6 @@ section:after {
 }
 
 footer {
-    background-color: white;
     padding: 10px;
     text-align: center;
     color: black;
